--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Reliable plumbing services in Boston, MA. Drain cleaning, water heaters, repairs, and emergency service. Call for fast, friendly help."
+      content="Middle-earth inspired plumbing services in Boston, MA. No leak shall pass — honest work, clear prices, and fast help."
     />
-    <title>Boston Harbor Plumbing — Local Plumber in Boston, MA</title>
+    <title>Middle‑earth Plumbing Co. — No Leak Shall Pass</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=EB+Garamond:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
@@ -37,8 +37,8 @@
             </svg>
           </div>
           <div class="brand-text">
-            <div class="brand-name">Boston Harbor Plumbing</div>
-            <div class="brand-sub">Licensed • Insured • Local</div>
+            <div class="brand-name">Middle‑earth Plumbing Co.</div>
+            <div class="brand-sub">No leak shall pass • Boston, MA</div>
           </div>
         </div>
 
@@ -47,8 +47,8 @@
           <a href="#reviews">Reviews</a>
           <a href="#areas">Service Area</a>
           <a href="#faq">FAQ</a>
-          <a class="btn btn-small btn-outline" href="#contact">Get a quote</a>
-          <a class="btn btn-small btn-solid" href="tel:+16175550123" aria-label="Call Boston Harbor Plumbing">
+          <a class="btn btn-small btn-outline" href="#contact">Summon a quote</a>
+          <a class="btn btn-small btn-solid" href="tel:+16175550123" aria-label="Call Middle-earth Plumbing">
             Call (617) 555‑0123
           </a>
         </nav>
@@ -77,42 +77,40 @@
       <section class="hero">
         <div class="container hero-grid">
           <div class="hero-copy">
-            <p class="pill">Same‑day appointments • Emergency help available</p>
-            <h1>Fast, honest plumbing in Boston.</h1>
+            <p class="pill">The fellowship of leak‑slayers • Emergency help available</p>
+            <h1>No leak shall pass.</h1>
             <p class="lead">
-              From leaking faucets to water heaters and drain clogs—Boston Harbor Plumbing shows up on time, explains
-              your options, and fixes it right.
+              From dripping faucets in cozy hobbit‑holes to burst pipes in towering keeps—Middle‑earth Plumbing shows up
+              on time, explains your options, and fixes it right the first quest.
             </p>
 
             <div class="hero-cta">
-              <a class="btn btn-solid" href="tel:+16175550123">Call (617) 555‑0123</a>
-              <a class="btn btn-outline" href="#contact">Request a quote</a>
+              <a class="btn btn-solid" href="tel:+16175550123">Summon a plumber</a>
+              <a class="btn btn-outline" href="#contact">Request a quest quote</a>
             </div>
 
             <div class="hero-proof">
               <div class="proof-item">
                 <div class="proof-title">4.9★</div>
-                <div class="proof-sub">Average rating</div>
+                <div class="proof-sub">Across the realms</div>
               </div>
               <div class="proof-item">
-                <div class="proof-title">Upfront</div>
-                <div class="proof-sub">Clear pricing</div>
+                <div class="proof-title">True‑tongued</div>
+                <div class="proof-sub">Honest, clear pricing</div>
               </div>
               <div class="proof-item">
-                <div class="proof-title">Boston‑local</div>
-                <div class="proof-sub">Neighborhood service</div>
+                <div class="proof-title">Boston‑shire</div>
+                <div class="proof-sub">Local to your realm</div>
               </div>
             </div>
 
-            <p class="tiny note">
-              Tip: Replace the placeholder phone number with your real number everywhere it appears.
-            </p>
+            <p class="tiny note">Tip: swap in your real name, phone, and email before you journey live.</p>
           </div>
 
           <div class="hero-card" role="region" aria-label="Quick estimate form">
             <div class="card">
-              <h2 class="card-title">Get a fast estimate</h2>
-              <p class="card-sub">Tell us what’s going on—reply within 1 business hour.</p>
+              <h2 class="card-title">Begin your plumbing quest</h2>
+              <p class="card-sub">Tell us what plagues your pipes—our reply will arrive swifter than a rider of Rohan.</p>
 
               <form id="quoteForm" class="form" novalidate>
                 <div class="grid-2">
@@ -127,31 +125,31 @@
                 </div>
 
                 <label>
-                  <span>Service needed</span>
+                  <span>Type of quest</span>
                   <select name="service" required>
                     <option value="" selected disabled>Select one</option>
-                    <option>Drain cleaning / clog</option>
+                    <option>Drain cleaning / banish a clog</option>
                     <option>Leak / pipe repair</option>
-                    <option>Water heater</option>
+                    <option>Water heater (no more cold Mordor showers)</option>
                     <option>Fixture install (sink, toilet, faucet)</option>
                     <option>Garbage disposal</option>
-                    <option>Other</option>
+                    <option>Other plumbing quest</option>
                   </select>
                 </label>
 
                 <label>
-                  <span>Message</span>
+                  <span>Describe the trouble in your realm</span>
                   <textarea
                     name="message"
                     rows="4"
-                    placeholder="Where is the issue? Any photos? When do you need service?"
+                    placeholder="Where is the issue? Any photos from your realm? When do you need service?"
                     required
                   ></textarea>
                 </label>
 
                 <div class="form-row">
-                  <button class="btn btn-solid" type="submit">Send request</button>
-                  <p class="tiny muted">Or call now: <a href="tel:+16175550123">(617) 555‑0123</a></p>
+                  <button class="btn btn-solid" type="submit">Send ravens (request)</button>
+                  <p class="tiny muted">Or call the White Council: <a href="tel:+16175550123">(617) 555‑0123</a></p>
                 </div>
 
                 <p class="tiny form-status" id="formStatus" aria-live="polite"></p>
@@ -164,14 +162,14 @@
       <section class="section" id="services">
         <div class="container">
           <div class="section-head">
-            <h2>Plumbing services</h2>
-            <p>Residential & light commercial. Clean work, respectful crew, no surprise add‑ons.</p>
+            <h2>Plumbing services of the Fellowship</h2>
+            <p>From Shire‑sized cottages to city keeps—clean work, courteous crew, and no surprise curses or add‑ons.</p>
           </div>
 
           <div class="cards">
             <article class="service">
-              <h3>Drain cleaning</h3>
-              <p>Clogs, slow drains, backups—kitchen, bath, main line troubleshooting.</p>
+              <h3>Clogs of Doom (drain cleaning)</h3>
+              <p>We face the dark places beneath your home so you don’t have to—kitchen, bath, and main line clogs.</p>
               <ul class="checks">
                 <li>Camera inspection available</li>
                 <li>Root & grease solutions</li>
@@ -179,8 +177,8 @@
               </ul>
             </article>
             <article class="service">
-              <h3>Leaks & repairs</h3>
-              <p>Diagnose and repair leaks fast to protect walls, floors, and cabinets.</p>
+              <h3>Leak‑slaying & pipe repairs</h3>
+              <p>Swiftly tracked and defeated before they can flood your hall, warp your floors, or rot your cupboards.</p>
               <ul class="checks">
                 <li>Pipe & valve repairs</li>
                 <li>Toilet running/leaks</li>
@@ -188,8 +186,8 @@
               </ul>
             </article>
             <article class="service">
-              <h3>Water heaters</h3>
-              <p>Repair and replacement for tank and tankless water heaters.</p>
+              <h3>Water heaters of Gondor</h3>
+              <p>Repair and replacement for tank and tankless heaters so you never again bathe in the chill of Mordor.</p>
               <ul class="checks">
                 <li>Same‑day installs (when available)</li>
                 <li>Code‑compliant work</li>
@@ -197,8 +195,8 @@
               </ul>
             </article>
             <article class="service">
-              <h3>Fixtures & upgrades</h3>
-              <p>Install and replace faucets, sinks, toilets, shower valves, and more.</p>
+              <h3>Fixtures fit for the halls of kings</h3>
+              <p>Install or replace faucets, sinks, toilets, and showers with work as neat as an elven script.</p>
               <ul class="checks">
                 <li>Clean, sealed finishes</li>
                 <li>Haul‑away old fixtures</li>
@@ -209,8 +207,8 @@
 
           <div class="cta-band">
             <div>
-              <h3>Need emergency plumbing?</h3>
-              <p class="muted">If you have active flooding, shut off the water and call immediately.</p>
+              <h3>Need emergency plumbing at once?</h3>
+              <p class="muted">If the waters rise like the Anduin in spring, shut off the main and call immediately.</p>
             </div>
             <a class="btn btn-solid" href="tel:+16175550123">Call (617) 555‑0123</a>
           </div>
@@ -220,24 +218,30 @@
       <section class="section alt" id="reviews">
         <div class="container">
           <div class="section-head">
-            <h2>What neighbors say</h2>
-            <p>Realistic, readable testimonials you can swap for your own.</p>
+            <h2>What the free folk say</h2>
+            <p>Swap these for real reviews from your own realm when you’re ready.</p>
           </div>
 
           <div class="reviews">
             <figure class="review">
               <blockquote>
-                “Showed up on time, explained the options, and fixed our kitchen leak in under an hour. Super clean
-                work.”
+                “Arrived right on time, walked us through every option, and banished a kitchen leak faster than Gandalf
+                sent the Balrog into the abyss.”
               </blockquote>
-              <figcaption>— North End homeowner</figcaption>
+              <figcaption>— Homeowner of the North End</figcaption>
             </figure>
             <figure class="review">
-              <blockquote>“Our shower wouldn’t get hot. They diagnosed it quickly and the price was exactly as quoted.”</blockquote>
+              <blockquote>
+                “Our shower wouldn’t get hot. They tracked the problem like rangers of the North, and the price was
+                exactly as foretold.”
+              </blockquote>
               <figcaption>— South Boston resident</figcaption>
             </figure>
             <figure class="review">
-              <blockquote>“Cleared a stubborn main line clog and gave us tips to prevent it. Friendly and professional.”</blockquote>
+              <blockquote>
+                “Cleared a stubborn main line clog that felt older than the mines of Moria and left us with tips to keep
+                it that way.”
+              </blockquote>
               <figcaption>— Dorchester customer</figcaption>
             </figure>
           </div>
@@ -247,27 +251,30 @@
       <section class="section" id="areas">
         <div class="container">
           <div class="section-head">
-            <h2>Boston service area</h2>
-            <p>Boston proper plus nearby neighborhoods and towns. Ask if you’re just outside the list.</p>
+            <h2>Realms we ride to (service area)</h2>
+            <p>Boston proper plus nearby towns. If your home lies beyond these borders, send word and we’ll see.</p>
           </div>
 
           <div class="area-grid">
             <div class="area">
-              <h3>Boston neighborhoods</h3>
+              <h3>Boston‑shire neighborhoods</h3>
               <p class="muted">
                 Back Bay, Beacon Hill, Dorchester, East Boston, Jamaica Plain, North End, Roslindale, Roxbury, South
-                Boston, South End, West Roxbury.
+                Boston, South End, West Roxbury, and more.
               </p>
             </div>
             <div class="area">
-              <h3>Nearby towns</h3>
-              <p class="muted">Cambridge, Somerville, Brookline, Chelsea, Everett, Medford, Quincy, Revere, Watertown.</p>
+              <h3>Nearby realms</h3>
+              <p class="muted">
+                Cambridge, Somerville, Brookline, Chelsea, Everett, Medford, Quincy, Revere, Watertown, and surrounding
+                lands.
+              </p>
             </div>
             <div class="area map">
-              <h3>On‑site estimates</h3>
+              <h3>On‑site estimates (we come to your hall)</h3>
               <p class="muted">
-                We’ll confirm arrival windows by text/phone. Parking restrictions and condo access are no problem—we
-                plan for it.
+                We’ll confirm arrival windows by text or phone. Tight alleys, steep stairs, and condo gates are no
+                match for this fellowship.
               </p>
               <div class="mini-card">
                 <div class="mini-row">
@@ -291,13 +298,13 @@
       <section class="section alt" id="faq">
         <div class="container">
           <div class="section-head">
-            <h2>FAQ</h2>
-            <p>Quick answers to common questions.</p>
+              <h2>FAQ of the Fellowship</h2>
+            <p>Quick answers before you begin your plumbing quest.</p>
           </div>
 
           <div class="faq">
             <details>
-              <summary>Do you offer free estimates?</summary>
+              <summary>Do you offer free estimates for my quest?</summary>
               <p>
                 For many jobs we can give a ballpark estimate from photos and details. For complex issues, we’ll schedule
                 an on‑site diagnostic and apply that cost toward the repair when possible.
@@ -312,7 +319,7 @@
               <p>Cash, major cards, and digital payments. Invoices provided for all work.</p>
             </details>
             <details>
-              <summary>Can you work in condos and older buildings?</summary>
+              <summary>Can you work in condos and older buildings (old as Minas Tirith)?</summary>
               <p>
                 Absolutely. We’re used to Boston’s older plumbing, tight access, and building requirements. We coordinate
                 with property managers when needed.
@@ -326,10 +333,8 @@
         <div class="container">
           <div class="contact-grid">
             <div>
-              <h2>Contact</h2>
-              <p class="muted">
-                Call for urgent issues. For quotes, send a request and include photos if you can.
-              </p>
+              <h2>Send word to the fellowship</h2>
+              <p class="muted">Call for urgent matters. For quotes, send a request and include photos from your realm.</p>
 
               <div class="contact-cards">
                 <div class="contact-card">
@@ -344,14 +349,14 @@
                 </div>
                 <div class="contact-card">
                   <div class="contact-k">Service area</div>
-                  <div class="contact-v">Boston & nearby</div>
+                  <div class="contact-v">Boston & nearby realms</div>
                 </div>
               </div>
             </div>
 
             <div class="card">
-              <h3 class="card-title">Request service</h3>
-              <p class="card-sub">This uses your email app by default. You can wire it to a form service later.</p>
+              <h3 class="card-title">Request a plumbing quest</h3>
+              <p class="card-sub">This opens your email app by default. Swap to a form service later if you wish.</p>
               <form id="contactForm" class="form" novalidate>
                 <label>
                   <span>Name</span>
@@ -362,8 +367,13 @@
                   <input name="email" type="email" autocomplete="email" required placeholder="you@email.com" />
                 </label>
                 <label>
-                  <span>What do you need help with?</span>
-                  <textarea name="message" rows="5" required placeholder="Describe the issue and your address/area"></textarea>
+                  <span>What strange waters trouble your hall?</span>
+                  <textarea
+                    name="message"
+                    rows="5"
+                    required
+                    placeholder="Describe the issue, your address/area, and when the trouble began."
+                  ></textarea>
                 </label>
                 <div class="form-row">
                   <button class="btn btn-solid" type="submit">Email us</button>
@@ -380,9 +390,9 @@
     <footer class="footer">
       <div class="container footer-inner">
         <div>
-          <div class="brand-name">Boston Harbor Plumbing</div>
+          <div class="brand-name">Middle‑earth Plumbing Co.</div>
           <p class="tiny muted">
-            Serving Boston, MA. © <span id="year"></span>. All rights reserved.
+            Serving Boston and nearby realms. © <span id="year"></span>. All rights reserved.
           </p>
         </div>
         <div class="footer-links">
@@ -396,3 +406,4 @@
     <script src="./script.js"></script>
   </body>
 </html>
+
